--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-  padding: 1rem;
+  padding: .5rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -10,7 +10,6 @@
 }
 
 .navbar a {
-  margin-left: 16px;
   text-decoration: none;
   padding: 6px;
   color: #f2f2f2;
@@ -26,7 +25,7 @@
   list-style: none;
 }
 
-.navbar .active {
+/* .navbar .active {
   font-weight: 600;
   border-bottom: 2px solid var(--orange);
-}
+} */
