--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -29,3 +29,64 @@
   font-weight: 600;
   border-bottom: 2px solid var(--orange);
 } */
+.hamburger {
+  display: none;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+.hamburger span {
+  display: block;
+  width: 24px;
+  height: 2px;
+  margin: 4px 0;
+  background-color: white;
+  transition: transform 0.2s;
+}
+
+.nav-items {
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.nav-items.open {
+  position: absolute;
+  top: 70px;
+  left: 0;
+  width: 100%;
+  background-color: #282c34;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.nav-items li {
+  margin: 0 10px;
+}
+
+@media (max-width: 768px) {
+  .hamburger {
+    display: block;
+  }
+
+  .nav-items {
+    position: absolute;
+    top: 70px;
+    right: 0;
+    width: 100%;
+    background-color: #282c34;
+    padding: 10px;
+    display: none;
+    flex-direction: column;
+  }
+
+  .nav-items.open {
+    display: flex;
+  }
+}
